[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Diya Kithani", email = "diyakithani.2003@gmail.com" }]
readme = "README.md"
requires-python = "<=3.11"
dependencies = [ "dash", "numpy", "pandas" ]

[tool.setuptools.packages.find]
exclude = [ "assets", "data" ]